added pr throughput kpi